--- a/webapp/src/components/LineGraph.css
+++ b/webapp/src/components/LineGraph.css
@@ -2,7 +2,16 @@
     position: relative;
     height: 500px;
     width: 1000px;
-    max-width: 100%;
+    max-width: 96%;
+    margin-top: 50px;
+}
+
+.table-container {
+    position: relative;
+    width: 1000px;
+    max-width: 90%;
+    overflow-x: scroll;
+    margin-top: 50px;
 }
 
 .age-group-button {
