--- a/webapp/src/components/App.css
+++ b/webapp/src/components/App.css
@@ -20,7 +20,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #000000;
 }
 
 .App-link {
@@ -34,4 +34,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.support-text {
+    font-size: 14px;
+    text-align: right;
+    width: 100%;
+    margin-right: 20px;
 }
