--- a/webapp/src/components/LineGraph.css
+++ b/webapp/src/components/LineGraph.css
@@ -29,6 +29,13 @@
     font-size: 14px;
 }
 
+.controls-loading-spinner {
+    position: absolute;
+    display: inline-block;
+    margin-left: 20px;
+    margin-top: 17px;
+}
+
 .data-source-text {
     margin-top: 50px;
     font-size: 16px;
